Configured about page on mobile (+ themes) [scale issue with tablet layout]

--- a/css/style.css
+++ b/css/style.css
@@ -11,11 +11,6 @@
 html, body {
     height: 100%;
     width: 100%;
-    overflow: auto;
-}
-
-html {
-    background-color: black;
 }
 
 body {
@@ -347,6 +342,10 @@ body {
 
     #about-body {
         background-attachment: fixed!important;
+        background: url(../images/bottom-trees_resized.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
     }
 
     #about-section {
@@ -356,20 +355,41 @@ body {
 
     #about-section h1 {
         font-size: 60px;
+        color: #0a0b0a!important;
     }
 
     #about-section p {
         font-size: 18px;
         line-height: 1.75rem;
+        color: #0a0b0a!important;
+        background-color: rgba(39, 43, 39, 0.10) !important;
     }
 
     .about-buttons {
         height: 40px;
         font-size: 18px;
+        margin-top: 1rem;
+        background-color: transparent!important;
+        color: #0a0b0a!important;
+        border-color: #0a0b0a!important;
+    }
+
+    .about-buttons:hover {
+        background-color: #0a0b0a!important;
+        color: white!important;
     }
 
     .to-notice {
         font-size: 22px;
+        color: #0a0b0a!important;
+    }
+
+    #dash-separator {
+        border-color: #0a0b0a!important;
+    }
+
+    #about-p a {
+        color: #0a0b0a!important;
     }
 
     #relative-footer {
@@ -586,32 +606,64 @@ body {
 
     /* ==================== ABOUT SECTION ==================== */
 
+    #about-body {
+        background: url(../images/bottom-trees_resized.jpg);
+        background-repeat: no-repeat;
+        background-size: cover;
+        background-position: center;
+    }
+
+    #about-body footer {
+        margin-top: 4rem;
+    }
+
     #about-section {
         width: 70%;
         margin-top: 125px;
     }
 
     #about-section h1 {
-        font-size: 45px;
+        font-size: 40px;
+        color: #0a0b0a!important;
     }
 
     #about-section p {
         font-size: 14px;
         line-height: 1.25rem;
+        background-color: rgba(39, 43, 39, 0.10)!important;
+        color: #0a0b0a!important;
     }
 
     .about-buttons {
         height: 35px;
         font-size: 14px;
+        margin-top: 1rem;
+        background-color: transparent!important;
+        color: #0a0b0a!important;
+        border-color: #0a0b0a!important;
+    }
+
+    .about-buttons:hover {
+        background-color: #0a0b0a!important;
+        color: white!important;
     }
 
     .to-notice {
-        font-size: 18px;
+        font-size: 15px;
+        color: #0a0b0a!important;
+    }
+
+    #dash-separator {
+        border-color: #0a0b0a!important;
+    }
+
+    #about-p a {
+        color: #0a0b0a!important;
     }
 
 }
 
-@media screen and (min-width: 320px) and (max-width: 767px) {
+@media screen and (max-width: 767px) {
     /* ===================== MOBILE LAYOUT ==================== */
             
     /* --------- FRONT PAGE SECTION ---------*/
@@ -820,13 +872,17 @@ body {
 
     /* ==================== ABOUT SECTION ==================== */
 
+    #about-body footer {
+        margin-top: 8rem;
+    }
+
     #about-section {
-        width: 70%;
+        width: 90%;
         margin-top: 125px;
     }
 
     #about-section h1 {
-        font-size: 45px;
+        font-size: 40px;
     }
 
     #about-section p {
@@ -837,6 +893,7 @@ body {
     .about-buttons {
         height: 35px;
         font-size: 14px;
+        margin-top: 1rem;
     }
 
     .to-notice {
@@ -1406,17 +1463,13 @@ body {
 /* ==================== ABOUT SECTION ==================== */
 
 #about-body {
-    background: url(https://raw.githubusercontent.com/LeCDrom/a-strange-path/refs/heads/main/images/bottom-trees_resized.jpg);
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
     height: 100vh;
     opacity: 1;
 }
 
 #about-main {
     width: 100%;
-    height: 100%;
+    min-height: 100%;
     background: none;
     display: flex;
     flex-direction: column;
@@ -1443,15 +1496,12 @@ body {
 }
 
 #about-section h1 {
-    color: #0a0b0a;
     font-weight: bold;
     text-align: center;
 }
 
 #about-section p {
-    color: #0a0b0a;
     text-align: justify;
-    background-color: rgba(39, 43, 39, 0.10);
     padding: 20px;
     margin: 1% 0 1% 0;
     backdrop-filter: blur(1px);
@@ -1459,8 +1509,8 @@ body {
 
 .about-buttons {
     background-color: transparent;
-    color: #0a0b0a;
-    border: 2px solid #0a0b0a;
+    border-width: 2px;
+    border-style: solid;
 
     padding-inline: 10px;
     transition: ease 0.3s;
@@ -1468,18 +1518,9 @@ body {
     text-align: center;
     vertical-align: middle;
     display: table-cell;
-    margin: 0 auto;
-    margin-top: 1.5%;
-}
-
-.about-buttons:hover {
-    background-color: #0a0b0a;
-    color: white;
-    border-color: #0a0b0a;
 }
 
 #about-section a {
-    color: #0a0b0a;
     font-weight: bold;
     transition: 0.1s ease-in-out;
 }
@@ -1490,12 +1531,12 @@ body {
 
 .to-notice {
     font-weight: bold;
-    color: #0a0b0a!important;
     text-align: center;
 }
 
 #dash-separator {
-    border: #0a0b0a dashed 1px;
+    border-style: dashed;
+    border-width: 1px;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
 }
@@ -1622,6 +1663,42 @@ body.dark-theme #guide-title, body.dark-theme #introduction, body.dark-theme #go
     color: #9cae9c;
 }
 
+body.dark-theme #about-body {
+    background-color: #0a0b0a;
+}
+
+body.dark-theme #about-section h1 {
+    color: #9cae9c;
+}
+
+body.dark-theme #about-p a {
+    color: #9cae9c;
+}
+
+body.dark-theme #about-section p {
+    background-color: #0a0b0a;
+    border-color: #272b27;
+    color: #9cae9c;
+}
+
+body.dark-theme .about-buttons {
+    color: #9cae9c;
+    border-color: #9cae9c;
+}
+
+body.dark-theme .about-buttons:hover {
+    background-color: #9cae9c;
+    color: #0a0b0a;
+}
+
+body.dark-theme .to-notice {
+    color: #9cae9c;
+}
+
+body.dark-theme #dash-separator {
+    border-color: #272b27;
+}
+
 /* Light Theme */
 
 body.light-theme {
@@ -1736,4 +1813,39 @@ body.light-theme #A2:hover, body.light-theme #B5:hover {
 
 body.light-theme #guide-title, body.light-theme #introduction, body.light-theme #good-luck {
     color: #0a0b0a;
+}
+
+body.light-theme #about-body {
+    background-color: #9cae9c;
+}
+
+body.light-theme #about-section h1 {
+    color: #0a0b0a;
+}
+
+body.light-theme #about-p a {
+    color: #0a0b0a;
+}
+
+body.light-theme #about-section p {
+    border-color: #272b27;
+    color: #0a0b0a;
+}
+
+body.light-theme .about-buttons {
+    color: #0a0b0a;
+    border-color: #0a0b0a;
+}
+
+body.light-theme .about-buttons:hover {
+    background-color: #0a0b0a;
+    color: #9cae9c;
+}
+
+body.light-theme .to-notice {
+    color: #0a0b0a;
+}
+
+body.light-theme #dash-separator {
+    border-color: #272b27;
 }
